tests/fixtures/bad/unknown_item.maze
name:       maze.bad.name
theme:      nature
size:       4x4
start:      1,1
time_start: 08:00

tiles:
....
....
....
....

entities:
pickup#unknown_item.seed 1 1 item:made_up
